Add chart 1 description

--- a/index.Rmd
+++ b/index.Rmd
@@ -71,11 +71,9 @@ Describe why you included the table and what information it reveals
 
 ### Chart 1
 
-Include a chart
+This chart shows the trend of natural disasters from 1953 to present. As we can see, there is an upward trend line from 1992 with a peak in 2020 with a record 9489 natural disasters. There is also a noteworthy decline in disasters after 2020, possibly due to low human activity. This chart helps us correlate the increase in the number of natural disasters with climate change in terms of time.
 
-Describe why you chose this chart and what information it reveals
-
-``````{r, echo = FALSE, code = readLines("chart_1.R"), fig.width = 10, fig.height = 5}
+``````{r, echo = FALSE, warning = FALSE, message = FALSE, error = FALSE, message = FALSE, code = readLines("chart_1.R"), fig.width = 10, fig.height = 5}
 ```
 
 ### Chart 2
@@ -84,7 +82,7 @@ Include a chart
 
 Describe why you chose this chart and what information it reveals
 
-``````{r, echo = FALSE, code = readLines("chart_2.R"), fig.width = 10, fig.height = 5}
+``````{r, echo = FALSE, warning = FALSE, message = FALSE, error = FALSE, message = FALSE, code = readLines("chart_2.R"), fig.width = 10, fig.height = 5}
 ```
 
 ### Chart 3
@@ -93,7 +91,7 @@ Include a chart
 
 Describe why you chose this chart and what information it reveals
 
-``````{r, echo = FALSE, code = readLines("chart_3.R"), fig.width = 10, fig.height = 5}
+``````{r, echo = FALSE, warning = FALSE, message = FALSE, error = FALSE, message = FALSE, code = readLines("chart_3.R"), fig.width = 10, fig.height = 5}
 ```
 
 ### Citations
