--- a/index.Rmd
+++ b/index.Rmd
@@ -61,7 +61,7 @@ One limitation is that the dataset shows previous data of natural disasters in t
 
 ### Summary Information
 
-Write a summary paragraph of findings that includes the 5 values calculated from your summary information R script
+We have found the following values by manipulating this data set. First, the year with the most disasters was actually very recent, occurring in 2020. In our bar chart, we learned that the number of disasters has been as low as 1 in a year, to as high as 136 in a year. When examining the increase in the disasters over the last 20 years, from 2000 to 2020, we learned that the state of Maine saw the highest increase of number of disasters, rising by 438 occurrences in 2020 compared to the year 2000. Over the years, Texas has overwhelmingly been the state to report the most disasters, being at the top spot in 6 of the 16 oberseved intervals. Finally, the five-year period that saw the most disasters was in 2015-2020, where over 15,000 disasters were recorded.
 
 ### Table
 
@@ -88,8 +88,7 @@ This chart shows the number of natural disasters that happened in Washington Sta
 
 ### Chart 3
 
-
-We have included this data visualization because it shows us the net change in the number disasters by state, over a 20-year period from 2000 to 2020. In the map visualization, you can see that many east coast states saw siginificant increases, and the state that experienced the greatest increase in natural disasters was Maine, which saw an increase of 438 natural disasters.
+We have included this data visualization because it shows us the net change in the number disasters by state, over a 20-year period from 2000 to 2020. In the map visualization, you can see that many east coast states saw significant increases, and the state that experienced the greatest increase in natural disasters was Maine, which saw an increase of 438 natural disasters.
 
 ```{r, echo = FALSE, warning = FALSE, message = FALSE, error = FALSE, message = FALSE, code = readLines("chart_3.R"), fig.width = 10, fig.height = 5}
 
