--- a/index.Rmd
+++ b/index.Rmd
@@ -60,7 +60,7 @@ Finding out the most common categories of natural disasters can help researchers
 One limitation is that the dataset shows previous data of natural disasters in the United States. However, natural phenomena are not predictable. It is difficult for disaster managers to accurately predict future natural disasters. Although they could have a big idea, there are still flaws to the prediction. The second limitation is that the dataset only includes natural disasters with broad categories. Natural disasters include many specific categories and this dataset might not be able to consider those. Policymakers and disaster managers might not be very accurate when using data and taking measures to help specific areas with a particular natural disaster. The data retrieved from the technology might not be the best to predict future natural disasters. There are limitations to the accuracy of technology. This would be a challenge when disaster managers are considering the next move for each area. These are the challenges and limitations that might affect the result of the data.
 
 ### Summary Information
-``` {r}
+``` {r, echo = FALSE, warning = FALSE, message = FALSE, error = FALSE, message = FALSE,}
 source("summary.R")
 ```
 We have found the following values by manipulating this data set. First, the year with the most disasters was actually very recent, occurring in `r summary_info$year_max_disasters`. In our bar chart, we learned that the number of disasters has been as low as 1 in a year, to as high as 136 in a year. When examining the increase in the disasters over the last 20 years, from 2000 to 2020, we learned that the state of Maine saw the highest increase of number of disasters, rising by 438 occurrences in 2020 compared to the year 2000. Over the years, Texas has overwhelmingly been the state to report the most disasters, being at the top spot in 6 of the 16 observed intervals. Finally, the five-year period that saw the most disasters was in 2015-2020, where over 15,000 disasters were recorded.
