--- a/index.Rmd
+++ b/index.Rmd
@@ -63,7 +63,7 @@ One limitation is that the dataset shows previous data of natural disasters in t
 ``` {r, echo = FALSE, warning = FALSE, message = FALSE, error = FALSE, message = FALSE,}
 source("summary.R")
 ```
-We have found the following values by manipulating this data set. First, the year with the most disasters was actually very recent, occurring in `r summary_info$year_max_disasters`. In our bar chart, we learned that the number of disasters has been as low as 1 in a year, to as high as 136 in a year. When examining the increase in the disasters over the last 20 years, from 2000 to 2020, we learned that the state of Maine saw the highest increase of number of disasters, rising by 438 occurrences in 2020 compared to the year 2000. Over the years, Texas has overwhelmingly been the state to report the most disasters, being at the top spot in 6 of the 16 observed intervals. Finally, the five-year period that saw the most disasters was in 2015-2020, where over 15,000 disasters were recorded.
+We have found the following values by manipulating this data set. First, the year with the most disasters was actually very recent, occurring in `r summary_info$year_max_disasters`. In our bar chart, we learned that the number of disasters has been as low as 1 in a year, to as high as 136 in a year. When examining the increase in the disasters over the last 20 years, from 2000 to 2020, we learned that the state of Maine saw the highest increase of number of disasters, rising by 438 occurrences in 2020 compared to the year 2000. Over the years, `summary_info$state_most_common` has overwhelmingly been the state to report the most disasters, being at the top spot in 6 of the 16 observed intervals. Finally, the five-year period that saw the most disasters was in `r summary_info$most_disasters_range`, where over 15,000 disasters were recorded.
 
 ### Table
 
